# homework_web_12

./: LICENSE  README.md  pyproject.toml
app/: demo.sqlite3  main.py
app/api/: contact_items.py  users.py
app/depenedencies/: auth.py  database.py  database_pg.py
app/models/: base.py  contact.py  users.py
app/repo/: contacts.py  user.py
app/schemas/: contact.py  user.py
app/services/: contacts.py  users.py
